<package>
  <name>denso_controller</name>
  <version>0.1.0</version>
  <description>denso_controller</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>

  <license>BSD</license>


  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>open_controllers_interface</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>open_controllers_interface</run_depend>

</package>
