<package>
  <name>denso_launch</name>

  <version>0.1.0</version>
  <description>denso_launch</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>

  <license>BSD</license>


  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>denso_controller</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>vs060_moveit_config</build_depend>

  <run_depend>denso_controller</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>vs060_moveit_config</run_depend>

</package>
