<package>
  <name>denso_launch</name>
  <version>0.2.7</version>
  <description>denso_launch</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isaac Isao Saito</maintainer>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <url type="website">http://wiki.ros.org/denso</url>
  <url type="bugtracker">https://github.com/start-jsk/denso/issues</url>
  <url type="repository">https://github.com/start-jsk/denso</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>denso_controller</build_depend>
  <build_depend>vs060_moveit_config</build_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>denso_controller</run_depend>
  <run_depend>vs060_moveit_config</run_depend>

</package>
