<?xml version="1.0"?>
<package>
  <name>densowave</name>
  <version>0.2.0</version>
  <description>The densowave package</description>

  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isaac Isao Saito</maintainer>
  <license>BSD</license>
  <author>Ryohei Ueda</author>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <url type="website">http://wiki.ros.org/densowave</url>
  <url type="bugtracker">https://github.com/start-jsk/densowave/issues</url>
  <url type="repository">https://github.com/start-jsk/densowave</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>denso_controller</run_depend>
  <run_depend>denso_launch</run_depend>
  <run_depend>vs060</run_depend>
  <run_depend>vs060_moveit_config</run_depend>

  <export><metapackage/></export>
</package>