<?xml version="1.0"?>
<package>
  <name>densowave</name>
  <version>0.2.4</version>
  <description><p>Packages in the densowave suite provide controller functionality for Denso Wave's industrial manipulators. </p>
   <p><a href = "http://goo.gl/kL0vnf">ORiN</a> (Open Robot interface for the Network) is a unified network interface for industrial robot applications and has been stably utilized in Denso's manipulators for years. Controllers in this package suite uses b-CAP, TCP/UDP-based control protocol defined in ORiN, and because of its demonstrated stability, this package realizes product level reliable communication.</p>
   <p>Also, as genuine ROS package, it enables robot application developers to access full ROS features. MoveIt! configuration package is also included for some of Denso's robots.</p>
  </description>


  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isaac Isao Saito</maintainer>
  <license>BSD</license>
  <author>Ryohei Ueda</author>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <url type="website">http://wiki.ros.org/densowave</url>
  <url type="bugtracker">https://github.com/start-jsk/densowave/issues</url>
  <url type="repository">https://github.com/start-jsk/densowave</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>denso_controller</run_depend>
  <run_depend>denso_launch</run_depend>
  <run_depend>vs060</run_depend>
  <run_depend>vs060_moveit_config</run_depend>

  <export><metapackage/></export>
</package>