<package>
  <name>vs060</name>
  <version>0.2.4</version>
  <description>
   <p>This package provides <a href = "http://goo.gl/kL0vnf">ORiN</a>-based controller functionality for VS060, a Denso's virtical multi-joint robot.</p>
  </description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isaac Isao Saito</maintainer>
  <license>BSD</license>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <url type="website">http://wiki.ros.org/vs060</url>
  <url type="bugtracker">https://github.com/start-jsk/densowave/issues</url>
  <url type="repository">https://github.com/start-jsk/densowave</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>open_controllers_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslang</build_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>open_controllers_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslang</run_depend>

</package>
